# Llama

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  test.yml
configs/agents/: baseline_rule_agent.yaml  chatgpt.yaml  speech_pipeline.yaml  userlm.yaml
configs/experiments/: exp_01_baseline.yaml  exp_02_noise.yaml  exp_03_agent_comparison.yaml
configs/tasks/: navigation_maps.yaml
data/runs/: baseline.json
scripts/: compute_metrics.py  export_web_data.py  run_batch.py  run_experiment.py
src/sds_eval/: __init__.py
src/sds_eval/agents/: __init__.py  base.py  chatgpt_agent.py  rule_agent.py  userlm.py
src/sds_eval/analysis/: __init__.py  explanations.py  export_web.py  reliability.py
src/sds_eval/dialogue/: __init__.py  manager.py  state.py  transcript.py
src/sds_eval/experiments/: __init__.py  parameter_grid.py  profiles.py  runner.py
src/sds_eval/metrics/: __init__.py  efficiency.py  metric_registry.py  repair_counts.py  semantic_consistency.py  task_success.py
src/sds_eval/pipeline/: __init__.py  speech_pipeline.py
src/sds_eval/task/: __init__.py  map_loader.py  navigation_env.py  planner.py  success_checker.py
src/sds_eval/utils/: __init__.py
tests/: test_agent_adapter.py  test_knowledge_split_and_planning.py  test_metrics.py  test_navigation_success.py  test_speech_pipeline.py  test_transcript_schema.py  test_web_export.py
web/: index.html  package-lock.json  package.json
web/public/data/: experiments.json  metrics.json  runs.json
web/src/: App.tsx  styles.css
web/src/components/: AgentComparison.tsx  (+10 more)
(+14 files in other folders)
